# MID360_ROS2_SLAM

./: .gitignore  AGENTS.md  ARCHITECTURE_REVIEW_REPORT.md  CLAUDE.md  CODE_REVIEW_BACKEND_OPTIMIZATION.md  CODE_REVIEW_REPORT.md  COLLABORATION_ANALYSIS.md  COMPLETE_USER_GUIDE.md  COMPREHENSIVE_CODE_REVIEW_10_FIXES.md  DENSE_MAP_SOLUTION.md  DEVELOPMENT_ROADMAP.md  HBA_DIVIDE_BY_ZERO_CODE_REVIEW.md  HBA_NUMERICAL_STABILITY_CODE_REVIEW.md  LICENSE  MAP_SAVE_GUIDE.md  MASTER_ISSUES_LIST.md  PROJECT_COMPREHENSIVE_ASSESSMENT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_SLAM.md  SLAM_START_COMMAND_ANALYSIS.md  THREAD_SAFETY_FIXES_CODE_REVIEW.md  bag_analysis_report.json  check_slam_status.sh  monitor_indoor_slam.sh  optimized_monitor_20250923_223329.csv  performance_analysis_report_20250923_125447.json  setup_environment.sh  start_mapping_session.sh  test_bag_dynamic_filter.sh  test_dynamic_filter.sh  test_slam_gui_logic.md  动态过滤器功能综合检查报告.md
.claude/: settings.local.json
.claude/agents/: ros2-slam-engineer.md
.serena/: project.yml
config/: config_generation_summary.txt  dynamic_filter.yaml  full_slam_config.yaml  launch_config.yaml  master_config.yaml  slam_master_config.yaml
config/backups/backup_20250922_193058/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250922_193547/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250923_101200/: enhanced_fastlio2.rviz  hba.yaml  launch_config.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250923_101621/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250923_101645/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250923_222557/: enhanced_fastlio2.rviz  lio.yaml  pgo.yaml
config/backups/backup_20250923_222847/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250923_224735/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250923_225018/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250924_004225/: enhanced_fastlio2.rviz  pgo.yaml
config/backups/backup_20250924_004835/: MID360_config.json  enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250924_005218/: enhanced_fastlio2.rviz  hba.yaml  launch_config.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250924_012744/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250924_124329/: enhanced_fastlio2.rviz  localizer.yaml
config/backups/backup_20250927_080643/: enhanced_fastlio2.rviz  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250927_110221/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml  point_cloud_filter.yaml
config/backups/backup_20250927_110849/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  localizer.yaml  pgo.yaml
config/backups/backup_20250927_113746/: enhanced_fastlio2.rviz  hba.yaml  launch_config.yaml  lio.yaml  localizer.yaml  pgo.yaml  point_cloud_filter.yaml
config/backups/backup_20250927_124057/: enhanced_fastlio2.rviz  hba.yaml  lio.yaml  pgo.yaml  (+2 more)
docs/: config_master_reference.md  ws_livox_performance_report.md
docs/development/: MID360_SLAM_Enhancement_Development_Guide.md  dynamic_object_filter_guide.md  hba_realtime_optimization_guide.md  pgo_loop_detection_guide.md  testing_and_validation_guide.md  up.md
tools/: GUI_README.md  INSTALL_GUI.md  MATPLOTLIB_CHINESE_FONT_SOLUTION.md  README.md  advanced_point_cloud_processor.py  apply_preset.py  bag_analysis_report.json  bag_data_analyzer.py  benchmark_refinement.py  check_docs.sh  check_dynamic_filter_runtime.sh  chinese_font_config.py  comprehensive_performance_report.py  config_generator.py  config_validator.py  dynamic_filter_performance_analyzer.py  dynamic_filter_visualization_guide.md  extract_raw_sensors.py  fix_copy_methods.py  gridmap_example.md  gridmap_gui.py  imu_odom_monitor.py  install_gtsam.sh  map_refinement.py  map_saver_node.py  network_detector.py  pcd_index.py  pcd_to_gridmap.py  pcd_to_gridmap_backup.py  performance_analyzer.py  point_cloud_processor_gui.py  publish_saved_map.py  reconstruct_map_from_patches.py  record_bag.py  record_data.py  replay_validation.py  rviz_map_viewer.py  save_map_simple.py  save_maps_bundle.py  slam_manager_gui.py  (+20 more)
tools/legacy/: README.md  network_detector.py  network_performance_tester.py
tools/map_refinement/: __init__.py  install_progress_dependencies.py  performance_benchmark.py  requirements.txt  多线程优化实现说明.md  过度去噪问题修复说明.md  配置参数调整指南.md
tools/rviz/: saved_map_viewer.rviz
validation_results/: clean_data_monitor.csv  optimized_test_lio_config.yaml  validation_20250922_201505_lio_config.yaml  validation_20250923_125330_lio_config.yaml  validation_20250923_143916_lio_config.yaml  validation_20250927_005524_lio_config.yaml  validation_20250927_174043_lio_config.yaml
ws_livox/src/point_cloud_filter/: CMakeLists.txt  README.md  package.xml
ws_livox/src/point_cloud_filter/config/: point_cloud_filter.yaml
ws_livox/src/point_cloud_filter/include/: point_cloud_filter_bridge.h
ws_livox/src/point_cloud_filter/launch/: point_cloud_filter_launch.py
ws_livox/src/point_cloud_filter/src/: point_cloud_filter_bridge.cpp  point_cloud_filter_bridge_node.cpp
ws_livox/src/slam_gui/: CMakeLists.txt  package.xml
ws_livox/src/slam_gui/include/slam_gui/: config_manager.h  control_panel.h  log_viewer.h  main_window.h  ros2_interface.h  system_monitor.h  visualization_widget.h
ws_livox/src/slam_gui/launch/: slam_gui.launch.py
ws_livox/src/slam_gui/resources/: resources.qrc
ws_livox/src/slam_gui/resources/styles/: dark_theme.qss  light_theme.qss
ws_livox/src/slam_gui/src/: config_manager.cpp  control_panel.cpp  log_viewer.cpp  main.cpp  main_window.cpp  ros2_interface.cpp  system_monitor.cpp  visualization_widget.cpp
ws_livox/src/slam_gui/ui/: main_window.ui
(+148 files in other folders)
