<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_cloud_filter</name>
  <version>0.1.0</version>
  <description>Point cloud filter bridge for dynamic object filtering in livox data stream</description>
  <maintainer email="tianyu@todo.todo">tianyu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>

  <!-- PCL dependencies -->
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- Project specific dependencies -->
  <depend>livox_ros_driver2</depend>
  <depend>localizer</depend>
  <depend>interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>