<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_gui</name>
  <version>1.0.0</version>
  <description>Qt5-based GUI for SLAM system control and monitoring</description>
  
  <maintainer email="developer@slam.com">SLAM Developer</maintainer>
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>interface</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libpcl-dev</build_depend>
  <build_depend>libvtk-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libyaml-cpp-dev</build_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>interface</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <exec_depend>libpcl-filters</exec_depend>
  <exec_depend>libpcl-visualization</exec_depend>
  <exec_depend>libvtk-common</exec_depend>
  <exec_depend>libyaml-cpp0.6</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>